--- a/templates/default/fulldoc/html/css/style.css
+++ b/templates/default/fulldoc/html/css/style.css
@@ -1,10 +1,9 @@
 {{{__super__}}}
 
-pre.value_tag { font-size: 1.2em; }
 .tags .callback .callback_item { list-style: none; margin-bottom: 25px; }
 .tags .callback .callback_item .signature {
   padding: 6px 12px;
   margin-bottom: 7px;
-  background: #fcfcfc; border: 1px solid #eee; -moz-border-radius: 3px; -webkit-border-radius: 3px;
-  margin-left: -15px; font-family: monospace; display: block; font-size: 1.1em;
+  background: #fcfcfc; border: 1px solid #eee; border-radius: 3px;
+  margin-left: -15px; font-family: monospace; display: block; font-size: 1em;
 }
