--- a/templates/default/module/html/constructor_summary.erb
+++ b/templates/default/module/html/constructor_summary.erb
@@ -1,5 +1,5 @@
 <h2>Constructor Summary
-  <small>(<a href="#" class="summary_toggle">collapse</a>)</small>
+  <small><a href="#" class="summary_toggle">collapse</a></small>
 </h2>
 
 <ul class="summary">
