--- a/templates/default/module/html/properties_summary.erb
+++ b/templates/default/module/html/properties_summary.erb
@@ -1,6 +1,6 @@
 <% groups(property_listing, "Property") do |list, title| %>
   <h2><%= title %>
-    <small>(<a href="#" class="summary_toggle">collapse</a>)</small>
+    <small><a href="#" class="summary_toggle">collapse</a></small>
   </h2>
 
   <ul class="summary">
