--- a/templates/default/module/html/events_summary.erb
+++ b/templates/default/module/html/events_summary.erb
@@ -7,7 +7,7 @@
     <% list.each do |event| %>
     <li class="<%= event.visibility %> <%= event.has_tag?(:deprecated) ? 'deprecated' : '' %>">
       <span class="summary_signature"><strong><%= link_object event, "'#{event.name}'" %></strong></span>
-      <span class="note title"><strong>function</strong> (<%= event.parameters.map(&:first).join(", ") %>)</span>
+      <span class="note title event"><strong>function</strong> (<%= event.parameters.map(&:first).join(", ") %>)</span>
 
       <% if event.has_tag?(:deprecated) %>
         <span class="summary_desc"><strong>Deprecated.</strong> <%= htmlify_line event.tag(:deprecated).text %></span>
